[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/examples"
]

[project]
name = "comfy_api_simplified"
version = "1.0.1"
authors = [
  { name="Deimos Deimos", email="deimos.double@gmail.com" },
]
description = "A simple way to schedule ComfyUI prompts with different parameters"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/deimos-deimos/comfy_api_simplified"
Issues = "https://github.com/deimos-deimos/comfy_api_simplified/issues"